# cenozon-pirm-client-py

./: CHANGELOG.md  README.md  pyproject.toml
cenozon_pirm_client/: __init__.py  client.py  pirm.py
cenozon_pirm_client/api/asset_manager_report/: get_asset_manager.py  get_asset_manager_group_group_name.py  get_asset_manager_group_group_name_data_format.py  get_asset_manager_group_group_name_schema.py  get_asset_manager_report_sid_data_format.py  get_asset_manager_report_sid_schema.py
cenozon_pirm_client/api/cenozon_pirm_data_gateway_service/: get.py
cenozon_pirm_client/api/custom_report/: get_custom.py  get_custom_report_name_data_format.py  get_custom_report_name_schema.py
cenozon_pirm_client/models/: __init__.py  available_report.py  csv_string_quoting.py  report_column.py  report_schema.py
cli/: README.md  pyproject.toml
cli/cenozon_pirm_cli/: __init__.py
